--- a/exercise5/index.html
+++ b/exercise5/index.html
@@ -10,7 +10,7 @@
     <header>
       <h1 class="heading">
         <a href="index.html">
-          tomohiko
+
         </a>
       </h1>
     </header>
@@ -18,34 +18,34 @@
     <nav>
       <ul class="nav-list">
         <li class="nav-list-item">
-          <a href="index.html">kawaii</a>
+          <a href="index.html"></a>
         </li>
         <li class="nav-list-item">
-          <a href="index.html">pretty</a>
+          <a href="index.html"></a>
         </li>
         <li class="nav-list-item">
-          <a href="index.html">cool</a>
+          <a href="index.html"></a>
         </li>
         <li class="nav-list-item">
-          <a href="index.html">enjoy</a>
+          <a href="index.html"></a>
         </li>
       </ul>
     </nav>
 
 <div class="main">
 
-     <biv class="box1">お花</biv>
-    <biv class="box2">きれい</biv>
-    <biv class="box3">ゲーム</biv>
-    <biv class="box4">たのしい</biv>
-     <biv class="box5">わいわい</biv>
-      <biv class="box6">わくわく</biv>
-      <biv class="box7">どきどき</biv>
-     <biv class="box8">にこにこ</biv>
-      <biv class="box9">ともひこ</biv>
-      <biv class="box10">まりん</biv>
-      <biv class="box11">あああ</biv>
-      <biv class="box12">おわり</biv>
+     <biv class="box1"></biv>
+    <biv class="box2"></biv>
+    <biv class="box3"></biv>
+    <biv class="box4"></biv>
+     <biv class="box5"></biv>
+      <biv class="box6"></biv>
+      <biv class="box7"></biv>
+     <biv class="box8"></biv>
+      <biv class="box9"></biv>
+      <biv class="box10"></biv>
+      <biv class="box11"></biv>
+      <biv class="box12"></biv>
 
   </div>
 
